datatables added and updated everywhere

--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
         "postcss": "^8.1.14",
         "sass": "^1.32.11",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "-": "^0.0.1",
+        "datatables.net": "^1.13.1",
+        "dt": "^0.0.1"
     }
 }
